   this is now considered the sole responsibility of 'peak.binding'.  The
   'IComponent.lookupComponent()' method still accepts the keyword argument,
   and attribute bindings still handle the creation name transparently.  It is
   just not available via naming system APIs, and naming contexts no longer
   have to deal with it.

 - REMOVED 'naming.ParsedURL'; it was deprecated as of 0.5 alpha 2.

 - The 'provides' keyword argument to various 'peak.binding' APIs has been
   renamed to 'offerAs', and it must be a sequence of configuration keys.
   (Previously, it accepted either a single key or a tuple of keys.)
   The signature of 'binding.Constant()' was changed as well; the first
   positional argument is now the constant value, and 'offerAs' is now a
   keyword argument.  (Previously, 'provides' was the first positional argument
   of 'binding.Constant()'.)  The 'registerProvider()' method of
   'config.IConfigurable()' also now accepts only a single configuration key,
   as does 'EigenRegistry.register()'.

   Also, all 'peak.binding' APIs now only accept positional parameters for
   items unique to that API.  Items common to multiple APIs (such as 'offerAs',
   'doc', 'attrName', etc.) should now be supplied as keyword arguments.

   Bindings also now automatically "suggest" the containing object as a parent
   component for the contained object, whenever a value is assigned to them or
   computed.  If a non-None 'adaptTo' is set on the binding, the value assigned
   or computed will be adapted to the specified protocol before the parent
   component is suggested.  'binding.New()' no longer relies on the
   'IComponentFactory' interface, but instead uses the new adapt/suggest
   mechanisms.

   Previously, parent components were only "suggested" when a binding was set
   via component constructor keyword arguments.  Now, this is done at any time
   bindings are set, but *not* for non-binding keyword arguments.  In other